# Cpp-template

./: .envrc  .gitignore  CMakeLists.txt  DEVELOPMENT.md  README.md  conanfile.py  devbox.json  main.cpp
.github/: ci.yml
.github/workflows/: ci.yml
cmake/: Format.cmake  Glob.cmake  LanguageSettings.cmake  UnitTesting.cmake
src/: CMakeLists.txt
src/Tmp/: example.cpp  example.h
test/: CMakeLists.txt
test/Tmp/: test_example.cpp
